feat: check permission and cicd
