# internal/route/user.route.go
@@ -7,6 +7,8 @@ package route
 
 import (
 	"go-firebase/internal/controller"
+	"go-firebase/internal/permission"
+	"go-firebase/pkg/util"
 
 	"github.com/gofiber/fiber/v2"
 )
@@ -17,8 +19,9 @@ type UserRoute struct {
 
 func (r *UserRoute) Register(router fiber.Router) {
 	userRouter := router.Group("/users")
-	userRouter.Post("/", r.userCtrl.CreateUser)
-	userRouter.Get("/", r.userCtrl.GetUser)
+	userRouter.Post("/", util.HasPermission(permission.CreateUserPerm()), r.userCtrl.CreateUser)
+	userRouter.Get("/:identifier", util.HasPermission(permission.ReadUserPerm()), r.userCtrl.GetUser)
+	userRouter.Get("/", util.HasPermission(permission.ReadUserPerm()), r.userCtrl.GetUsers)
 }
 
 func NewUserRoute(userCtrl *controller.UserCtrl) *UserRoute {
